--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <title>BEN CASALINO</title>
+  <link rel="shortcut icon" href="images/botu.ico">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/about.css">
 </head>
@@ -27,14 +30,6 @@
     </nav>
   </header>
   <main>
-    <!-- <div class="fold">
-        <div class="header-exp">
-            <h6>PROJECTS
-                <br />
-                <hr />
-            </h6>
-        </div>
-</div> -->
     <div class="header-exp">
       <h6>PROJECTS
         <br />
@@ -42,73 +37,84 @@
     </h6>
     </div>
     <section class="grid">
-<!-- project name - team finder web app   -->
+      <!-- project name - team finder web app   -->
       <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/tf.png" /> </a>
-<!-- project name  - pixel maker proj -->
-        <a href="#"> <img class="item" src="images/grid6/wiw.png" /> </a>
-<!-- project name  - g70life -->
+      <!-- project name  - pixel maker proj -->
+      <a href="#"> <img class="item" src="images/grid6/wiw.png" /> </a>
+      <!-- project name  - g70life -->
       <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/clymb.png" /> </a>
-<!-- project name nuggets -->
+      <!-- project name nuggets -->
       <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/nug.png" /> </a>
 
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-              <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/nash.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/nash.png" /> </a>
       <!-- project name  - pixel maker proj -->
-              <a href="https://multco.us/it/multnomah-county-bridge-alerts"> <img class="item" src="images/grid6/mult.png" /> </a>
+      <a href="https://multco.us/it/multnomah-county-bridge-alerts"> <img class="item" src="images/grid6/mult.png" /> </a>
       <!-- project name  - g70life -->
-            <a href="http://www.wacom.com/en-us"> <img class="item" src="images/grid6/wacom.png" /> </a>
+      <a href="http://www.wacom.com/en-us"> <img class="item" src="images/grid6/wacom.png" /> </a>
       <!-- project name nuggets -->
-            <a href="https://g70.life/"> <img class="item" src="images/grid6/g70.png" /> </a>
+      <a href="https://g70.life/"> <img class="item" src="images/grid6/g70.png" /> </a>
 
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-            <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/jsdrums.png" /> </a>
+      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/jsdrums.png" /> </a>
       <!-- project name  - pixel maker proj -->
-              <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/planets.png" /> </a>
+      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/planets.png" /> </a>
       <!-- project name  - g70life -->
-            <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/taco.png" /> </a>
+      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/taco.png" /> </a>
       <!-- project name nuggets -->
-            <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/pero.png" /> </a>
+      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/pero.png" /> </a>
 
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-            <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/bsfb.png" /> </a>
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/bsfb.png" /> </a>
       <!-- project name  - pixel maker proj -->
-                <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/gci.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/gci.png" /> </a>
       <!-- project name  - g70life -->
-            <a href="https://soundcloud.com/benoftheuniverse"> <img class="item" src="images/grid6/botu_sc.png" /> </a>
+      <a href="https://soundcloud.com/benoftheuniverse"> <img class="item" src="images/grid6/botu_sc.png" /> </a>
       <!-- project name nuggets -->
-              <a href="https://dribbble.com/bencasalino">  <img class="item" src="images/grid6/dragic.png" /> </a>
+      <a href="https://dribbble.com/bencasalino">  <img class="item" src="images/grid6/dragic.png" /> </a>
 
     </section>
 
     <section class="grid">
       <!-- project name - team finder web app   -->
-            <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/jon.png" /> </a>
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/jon.png" /> </a>
       <!-- project name  - pixel maker proj -->
-              <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/adam.png" /> </a>
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/adam.png" /> </a>
       <!-- project name  - g70life -->
-            <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/ben.png" /> </a>
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/ben.png" /> </a>
       <!-- project name nuggets -->
-            <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/rafa.png" /> </a>
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/rafa.png" /> </a>
 
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-              <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/king.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/king.png" /> </a>
       <!-- project name  - pixel maker proj -->
-              <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/qa.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/qa.png" /> </a>
       <!-- project name  - g70life -->
-              <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/ddboa.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/ddboa.png" /> </a>
       <!-- project name nuggets -->
-            <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/cuprm.png" /> </a>
-
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/cuprm.png" /> </a>
     </section>
-
+<!-- STRUCTURE -->
+<!--
+row 1:
+-
+-
+-
+-
+row 2:
+-
+-
+-
+-
+ -->
 
   </main>
 </body>
