update social media links and email

--- a/index.html
+++ b/index.html
@@ -49,25 +49,34 @@ I'M A COLORADO BASED FRONT END WEB DEVELOPER
                     Wanna talk about a project?
                     <br /> </h3>
         <h4>Let's connect!</h4>
-
-        <a href="#">
+        <a href="mailto:bencasalino@gmail.com" target="top">
                         <img class="sm sm-icons" src="images/icons/sm-mail.svg">
                     </a>
 
-        <a href="#">
+        <a href="https://www.linkedin.com/in/bencasalino/">
                               <img class="sm sm-icons" src="images/icons/sm-li.svg">
                     </a>
 
-        <a href="#">
+        <a href="https://github.com/bencasalino">
                               <img class="sm sm-icons" src="images/icons/sm-gh.svg">
                     </a>
 
-        <a href="#">
+        <a href="https://www.instagram.com/benoftheuniverse/">
                               <img class="sm sm-icons"src="images/icons/sm-ig.svg">
                     </a>
       </div>
     </div>
   </main>
+
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91622684-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-91622684-3');
+  </script>
 </body>
 
 </html>
