--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </div>
 
       <div class="header-right">
-        <a href="index.html" class="nav-cta effect-underline">HOME </a>
+        <!-- <a href="index.html" class="nav-cta effect-underline">HOME </a>
+        <em class="pipe animated fadeIn">| </em> -->
+        <a class="nav-cta effect-underline" href="projects.html">PROJECTS</a>
         <em class="pipe animated fadeIn">| </em>
-        <a class="nav-cta effect-underline" href="about.html">ABOUT </a>
-        <em class="pipe animated fadeIn">| </em>
-        <a class="nav-cta effect-underline" href="work.html">WORK </a>
-        <em class="pipe animated fadeIn">| </em>
-        <a href="#" class="nav-cta effect-underline">CONTACT </a>
+        <!-- <a class="nav-cta effect-underline" href="work.html">WORK </a>
+        <em class="pipe animated fadeIn">| </em> -->
+        <a href="https://www.linkedin.com/in/bencasalino/" target="blank" class="nav-cta effect-underline">CONTACT </a>
       </div>
     </nav>
   </header>
@@ -35,7 +35,7 @@
     </div>
     <div class="fold">
       <div class="hello">
-        <h1>Hello World</h1>
+        <h1 class="hw">Hello World</h1>
         <hr>
         <h2>
                     <!-- I'm a Colorado based front end web developer powered by design. -->
@@ -46,9 +46,12 @@ I'M A COLORADO BASED FRONT END WEB DEVELOPER
       </div>
       <div class="bio">
         <h3>
-                    Wanna talk about a project?
-                    <br /> </h3>
+                    Wanna talk about a project? 
+                  
+                  </h3>
+                    <div class="rowcons">
         <h4>Let's connect!</h4>
+
         <a href="mailto:bencasalino@gmail.com" target="top">
                         <img class="sm sm-icons" src="images/icons/sm-mail.svg">
                     </a>
@@ -57,13 +60,13 @@ I'M A COLORADO BASED FRONT END WEB DEVELOPER
                               <img class="sm sm-icons" src="images/icons/sm-li.svg">
                     </a>
 
-        <a href="https://github.com/bencasalino">
+        <a href="https:/github.com/bencasalino">
                               <img class="sm sm-icons" src="images/icons/sm-gh.svg">
                     </a>
-
         <a href="https://www.instagram.com/benoftheuniverse/">
                               <img class="sm sm-icons"src="images/icons/sm-ig.svg">
                     </a>
+                    </div>
       </div>
     </div>
   </main>
@@ -71,6 +74,7 @@ I'M A COLORADO BASED FRONT END WEB DEVELOPER
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91622684-3"></script>
   <script>
+  // google abalytics stats and account tracking info 
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
