--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <title>BEN CASALINO</title>
   <link rel="shortcut icon" href="images/botu.ico">
   <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/about.css">
+  <link rel="stylesheet" href="styles/projects.css">
 </head>
 
 <body>
@@ -21,21 +21,21 @@
       <div class="header-right">
         <a href="index.html" class="nav-cta effect-underline">HOME </a>
         <em class="pipe animated fadeIn">| </em>
-        <a class="nav-cta effect-underline" href="about.html">ABOUT </a>
+        <!-- <a class="nav-cta effect-underline" href="about.html">ABOUT </a>
         <em class="pipe animated fadeIn">| </em>
         <a class="nav-cta effect-underline" href="work.html">WORK </a>
-        <em class="pipe animated fadeIn">| </em>
-        <a href="index.html" class="nav-cta effect-underline">CONTACT </a>
+        <em class="pipe animated fadeIn">| </em> -->
+        <a href="https://www.linkedin.com/in/bencasalino/" target="blank" class="nav-cta effect-underline">CONTACT </a>
       </div>
     </nav>
   </header>
   <main>
-    <div class="header-exp">
+    <!-- <div class="header-exp">
       <h6>PROJECTS
         <br />
         <hr />
     </h6>
-    </div>
+    </div> -->
     <section class="grid">
       <!-- project name - team finder web app   -->
       <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/tf.png" /> </a>
