new proj images

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
     </div> -->
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/tf.png" /> </a>
+      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/tfnew.png" /> </a>
       <!-- project name  - pixel maker proj -->
       <a href="#"> <img class="item" src="images/grid6/wiw.png" /> </a>
       <!-- project name  - g70life -->
@@ -102,6 +102,20 @@
       <!-- project name nuggets -->
       <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/cuprm.png" /> </a>
     </section>
+        <section class="grid">
+          <!-- project name - team finder web app   -->
+          <a href="https://dribbble.com/bencasalino">
+            <img class="item" src="images/grid6/pm.png" /> </a>
+          <!-- project name  - pixel maker proj -->
+          <a href="https://dribbble.com/bencasalino">
+            <img class="item" src="images/grid6/nba.png" /> </a>
+          <!-- project name  - g70life -->
+          <a href="https://dribbble.com/bencasalino">
+            <img class="item" src="images/grid6/logo-grid.png" /> </a>
+          <!-- project name nuggets -->
+          <a href="https://dribbble.com/bencasalino">
+            <img class="item" src="images/grid6/mammoth_gird.png" /> </a>
+        </section>
 <!-- STRUCTURE -->
 <!--
 row 1:
