--- a/projects.html
+++ b/projects.html
@@ -60,9 +60,9 @@
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/jsdrums.png" /> </a>
+      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/where.png" /> </a>
       <!-- project name  - pixel maker proj -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/planets.png" /> </a>
+      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/plan-it.png" /> </a>
       <!-- project name  - g70life -->
       <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/taco.png" /> </a>
       <!-- project name nuggets -->
@@ -94,7 +94,7 @@
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/king.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/hackathon.png" /> </a>
       <!-- project name  - pixel maker proj -->
       <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/qa.png" /> </a>
       <!-- project name  - g70life -->
@@ -114,8 +114,22 @@
             <img class="item" src="images/grid6/logo-grid.png" /> </a>
           <!-- project name nuggets -->
           <a href="https://dribbble.com/bencasalino">
-            <img class="item" src="images/grid6/mammoth_gird.png" /> </a>
+            <img class="item" src="images/grid6/mammoth_grid.png" /> </a>
         </section>
+                <section class="grid">
+                  <!-- project name - team finder web app   -->
+                  <a href="https://dribbble.com/bencasalino">
+                    <img class="item" src="images/grid6/jsdrums.png" /> </a>
+                  <!-- project name  - pixel maker proj -->
+                  <a href="https://dribbble.com/bencasalino">
+                    <img class="item" src="images/grid6/casa.png" /> </a>
+                  <!-- project name  - g70life -->
+                  <a href="https://dribbble.com/bencasalino">
+                    <img class="item" src="images/grid6/quark.png" /> </a>
+                  <!-- project name nuggets -->
+                  <a href="https://dribbble.com/bencasalino">
+                    <img class="item" src="images/grid6/elec-3.png" /> </a>
+                </section>
 <!-- STRUCTURE -->
 <!--
 row 1:
