--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/hackathon.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/place.png" /> </a>
       <!-- project name  - pixel maker proj -->
       <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/qa.png" /> </a>
       <!-- project name  - g70life -->
