--- a/projects.html
+++ b/projects.html
@@ -65,8 +65,8 @@
       <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/plan-it.png" /> </a>
       <!-- project name  - g70life -->
       <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/taco.png" /> </a>
-      <!-- project name nuggets -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/pero.png" /> </a>
+      <!-- project name tpToE -->
+      <a href="https://periodictable-of-elements.firebaseapp.com/"> <img class="item" src="images/grid6/tile-tptoe.png" /> </a>
 
     </section>
     <section class="grid">
