--- a/projects.html
+++ b/projects.html
@@ -38,9 +38,9 @@
     </div> -->
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/tfnew.png" /> </a>
+      <a href="https://teamfinder-app.firebaseapp.com/"> <img class="item" src="images/grid6/tfnew.png" /> </a>
       <!-- project name  - pixel maker proj -->
-      <a href="#"> <img class="item" src="images/grid6/wiw.png" /> </a>
+      <a href="https://github.com/chris-swan/walk_ins_welcome"> <img class="item" src="images/grid6/wiw.png" /> </a>
       <!-- project name  - g70life -->
       <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/clymb.png" /> </a>
       <!-- project name nuggets -->
@@ -60,11 +60,11 @@
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/where.png" /> </a>
+      <a href="https://github.com/mrsaxmannjr/Hackathon-Client"> <img class="item" src="images/grid6/where.png" /> </a>
       <!-- project name  - pixel maker proj -->
       <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/plan-it.png" /> </a>
       <!-- project name  - g70life -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/taco.png" /> </a>
+      <a href="http://anniehoogendoorn.com/tacoHomepage/"> <img class="item" src="images/grid6/taco.png" /> </a>
       <!-- project name tpToE -->
       <a href="https://periodictable-of-elements.firebaseapp.com/"> <img class="item" src="images/grid6/tile-tptoe.png" /> </a>
 
