--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
       <!-- project name  - g70life -->
       <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/clymb.png" /> </a>
       <!-- project name nuggets -->
-      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/nug.png" /> </a>
+      <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake"> <img class="item" src="images/grid6/nug.png" /> </a>
 
     </section>
     <section class="grid">
