--- a/index.html
+++ b/index.html
@@ -15,68 +15,58 @@
       <div class="header-left">
         <img class="logo animated slideInLeft" src="images/botu.ico" />
         <span class="header-name">BEN CASALINO
-                </span>
+        </span>
       </div>
-
       <div class="header-right">
-        <!-- <a href="index.html" class="nav-cta effect-underline">HOME </a>
-        <em class="pipe animated fadeIn">| </em> -->
         <a class="nav-cta effect-underline" href="projects.html">PROJECTS</a>
         <em class="pipe animated fadeIn">| </em>
-        <!-- <a class="nav-cta effect-underline" href="work.html">WORK </a>
-        <em class="pipe animated fadeIn">| </em> -->
         <a href="https://www.linkedin.com/in/bencasalino/" target="blank" class="nav-cta effect-underline">CONTACT </a>
       </div>
     </nav>
   </header>
   <main>
     <div class="test">
-
     </div>
     <div class="fold">
       <div class="hello">
         <h1 class="hw">Hello World</h1>
         <hr>
         <h2>
-                    <!-- I'm a Colorado based front end web developer powered by design. -->
-I'M A COLORADO BASED FRONT END WEB DEVELOPER
- <!-- POWERED BY DESIGN.  -->
-
-                </h2>
+          I'M A COLORADO BASED FRONT END WEB DEVELOPER
+        </h2>
       </div>
       <div class="bio">
         <h3>
-                    Wanna talk about a project? 
-                  
-                  </h3>
-                    <div class="rowcons">
-        <h4>Let's connect!</h4>
+          Wanna talk about a project?
+        </h3>
+        <div class="rowcons">
+          <h4>Let's connect!</h4>
 
-        <a href="mailto:bencasalino@gmail.com" target="top">
-                        <img class="sm sm-icons" src="images/icons/sm-mail.svg">
-                    </a>
+          <a href="mailto:bencasalino@gmail.com" target="top">
+            <img class="sm sm-icons" src="images/icons/sm-mail.svg">
+          </a>
 
-        <a href="https://www.linkedin.com/in/bencasalino/">
-                              <img class="sm sm-icons" src="images/icons/sm-li.svg">
-                    </a>
+          <a href="https://www.linkedin.com/in/bencasalino/">
+            <img class="sm sm-icons" src="images/icons/sm-li.svg">
+          </a>
 
-        <a href="https:/github.com/bencasalino">
-                              <img class="sm sm-icons" src="images/icons/sm-gh.svg">
-                    </a>
-        <a href="https://www.instagram.com/benoftheuniverse/">
-                              <img class="sm sm-icons"src="images/icons/sm-ig.svg">
-                    </a>
-                    </div>
+          <a href="https:/github.com/bencasalino">
+            <img class="sm sm-icons" src="images/icons/sm-gh.svg">
+          </a>
+          <a href="https://www.instagram.com/benoftheuniverse/">
+            <img class="sm sm-icons" src="images/icons/sm-ig.svg">
+          </a>
+        </div>
       </div>
     </div>
   </main>
 
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91622684-3"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91622684-3">
+    // keep script tag below <-- known bug
+  </script>
   <script>
-  // google abalytics stats and account tracking info 
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-91622684-3');
