last row updates

--- a/projects.html
+++ b/projects.html
@@ -21,10 +21,6 @@
       <div class="header-right">
         <a href="index.html" class="nav-cta effect-underline">HOME </a>
         <em class="pipe animated fadeIn">| </em>
-        <!-- <a class="nav-cta effect-underline" href="about.html">ABOUT </a>
-        <em class="pipe animated fadeIn">| </em>
-        <a class="nav-cta effect-underline" href="work.html">WORK </a>
-        <em class="pipe animated fadeIn">| </em> -->
         <a href="https://www.linkedin.com/in/bencasalino/" target="blank" class="nav-cta effect-underline">CONTACT </a>
       </div>
     </nav>
@@ -36,113 +32,120 @@
         <hr />
     </h6>
     </div> -->
+
+<!-- ROW 1  -->
+        <section class="grid">
+          <!-- project name - Colorado Soccer Games app   -->
+          <a href="https://teamfinder-app.firebaseapp.com/">
+            <img class="item" src="images/project_image_tiles/tfnew.png" /> </a>
+          <!-- project name  - Social Cloud  proj -->
+          <a href="https://github.com/chris-swan/walk_ins_welcome">
+            <img class="item" src="images/project_image_tiles/wiw.png" /> </a>
+          <!-- project name  - SFDOC  -->
+          <a href="http://www.github.com/bencasalino">
+            <img class="item" src="images/project_image_tiles/clymb.png" /> </a>
+          <!-- project -  -->
+          <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake">
+            <img class="item" src="images/project_image_tiles/nug.png" /> </a>
+        </section>
+<!-- ROW 2  -->
+
+
+
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="https://teamfinder-app.firebaseapp.com/"> <img class="item" src="images/grid6/tfnew.png" /> </a>
+      <a href="https://teamfinder-app.firebaseapp.com/"> <img class="item" src="images/project_image_tiles/tfnew.png" /> </a>
       <!-- project name  - pixel maker proj -->
-      <a href="https://github.com/chris-swan/walk_ins_welcome"> <img class="item" src="images/grid6/wiw.png" /> </a>
+      <a href="https://github.com/chris-swan/walk_ins_welcome"> <img class="item" src="images/project_image_tiles/wiw.png" /> </a>
       <!-- project name  - g70life -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/clymb.png" /> </a>
+      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/project_image_tiles/clymb.png" /> </a>
       <!-- project name nuggets -->
-      <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake"> <img class="item" src="images/grid6/nug.png" /> </a>
+      <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake"> <img class="item" src="images/project_image_tiles/nug.png" /> </a>
+    </section>
+
+    <section class="grid">
+      <!-- project name - team finder web app   -->
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/project_image_tiles/nash.png" /> </a>
+      <!-- project name  - pixel maker proj -->
+      <a href="https://multco.us/it/multnomah-county-bridge-alerts"> <img class="item" src="images/project_image_tiles/mult.png" /> </a>
+      <!-- project name  - g70life -->
+      <a href="http://www.wacom.com/en-us"> <img class="item" src="images/project_image_tiles/wacom.png" /> </a>
+      <!-- project name nuggets -->
+      <a href="https://g70.life/"> <img class="item" src="images/project_image_tiles/g70.png" /> </a>
 
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/nash.png" /> </a>
+      <a href="https://github.com/mrsaxmannjr/Hackathon-Client"> <img class="item" src="images/project_image_tiles/where.png" /> </a>
       <!-- project name  - pixel maker proj -->
-      <a href="https://multco.us/it/multnomah-county-bridge-alerts"> <img class="item" src="images/grid6/mult.png" /> </a>
+      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/project_image_tiles/plan-it.png" /> </a>
       <!-- project name  - g70life -->
-      <a href="http://www.wacom.com/en-us"> <img class="item" src="images/grid6/wacom.png" /> </a>
-      <!-- project name nuggets -->
-      <a href="https://g70.life/"> <img class="item" src="images/grid6/g70.png" /> </a>
-
-    </section>
-    <section class="grid">
-      <!-- project name - team finder web app   -->
-      <a href="https://github.com/mrsaxmannjr/Hackathon-Client"> <img class="item" src="images/grid6/where.png" /> </a>
-      <!-- project name  - pixel maker proj -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/grid6/plan-it.png" /> </a>
-      <!-- project name  - g70life -->
-      <a href="http://anniehoogendoorn.com/tacoHomepage/"> <img class="item" src="images/grid6/taco.png" /> </a>
+      <a href="http://anniehoogendoorn.com/tacoHomepage/"> <img class="item" src="images/project_image_tiles/taco.png" /> </a>
       <!-- project name tpToE -->
-      <a href="https://periodictable-of-elements.firebaseapp.com/"> <img class="item" src="images/grid6/tile-tptoe.png" /> </a>
+      <a href="https://periodictable-of-elements.firebaseapp.com/"> <img class="item" src="images/project_image_tiles/tile-tptoe.png" /> </a>
 
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/bsfb.png" /> </a>
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/project_image_tiles/bsfb.png" /> </a>
       <!-- project name  - pixel maker proj -->
-      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/gci.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/project_image_tiles/gci.png" /> </a>
       <!-- project name  - g70life -->
-      <a href="https://soundcloud.com/benoftheuniverse"> <img class="item" src="images/grid6/botu_sc.png" /> </a>
+      <a href="https://soundcloud.com/benoftheuniverse"> <img class="item" src="images/project_image_tiles/botu_sc.png" /> </a>
       <!-- project name nuggets -->
-      <a href="https://dribbble.com/bencasalino">  <img class="item" src="images/grid6/dragic.png" /> </a>
+      <a href="https://dribbble.com/bencasalino">  <img class="item" src="images/project_image_tiles/dragic.png" /> </a>
 
     </section>
 
     <section class="grid">
-      <!-- project name - team finder web app   -->
-      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/jon.png" /> </a>
-      <!-- project name  - pixel maker proj -->
-      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/adam.png" /> </a>
-      <!-- project name  - g70life -->
-      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/ben.png" /> </a>
-      <!-- project name nuggets -->
-      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/grid6/rafa.png" /> </a>
+      <!-- project name - BSFB app   -->
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/project_image_tiles/jon.png" /> </a>
+      <!-- project name  - ADAM proj -->
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/project_image_tiles/adam.png" /> </a>
+      <!-- project name  - BEN proj -->
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/project_image_tiles/ben.png" /> </a>
+      <!-- project name RAFA proj  -->
+      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/project_image_tiles/rafa.png" /> </a>
 
     </section>
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/place.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/project_image_tiles/place.png" /> </a>
       <!-- project name  - pixel maker proj -->
-      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/qa.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/project_image_tiles/qa.png" /> </a>
       <!-- project name  - g70life -->
-      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/ddboa.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/project_image_tiles/ddboa.png" /> </a>
       <!-- project name nuggets -->
-      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/grid6/cuprm.png" /> </a>
+      <a href="https://dribbble.com/bencasalino"> <img class="item" src="images/project_image_tiles/cuprm.png" /> </a>
     </section>
         <section class="grid">
-          <!-- project name - team finder web app   -->
+          <!-- project name - pixel web app   -->
+          <a href="https://pixel-fac8e.firebaseapp.com/">
+            <img class="item" src="images/project_image_tiles/pm.png" /> </a>
+          <!-- project name  - nba proj -->
           <a href="https://dribbble.com/bencasalino">
-            <img class="item" src="images/grid6/pm.png" /> </a>
-          <!-- project name  - pixel maker proj -->
-          <a href="https://dribbble.com/bencasalino">
-            <img class="item" src="images/grid6/nba.png" /> </a>
+            <img class="item" src="images/project_image_tiles/nba.png" /> </a>
           <!-- project name  - g70life -->
           <a href="https://dribbble.com/bencasalino">
-            <img class="item" src="images/grid6/logo-grid.png" /> </a>
+            <img class="item" src="images/project_image_tiles/logo-grid.png" /> </a>
           <!-- project name nuggets -->
           <a href="https://dribbble.com/bencasalino">
-            <img class="item" src="images/grid6/mammoth_grid.png" /> </a>
+            <img class="item" src="images/project_image_tiles/mammoth_grid.png" /> </a>
         </section>
+      <!-- ROW 1  -->
                 <section class="grid">
-                  <!-- project name - team finder web app   -->
+                  <!-- project name - Keyboard Drums app   -->
+                  <a href="https://keyboard-drums.firebaseapp.com/">
+                    <img class="item" src="images/project_image_tiles/jsdrums.png" /> </a>
+                  <!-- project name  - Casalino Chiropractic proj -->
                   <a href="https://dribbble.com/bencasalino">
-                    <img class="item" src="images/grid6/jsdrums.png" /> </a>
-                  <!-- project name  - pixel maker proj -->
-                  <a href="https://dribbble.com/bencasalino">
-                    <img class="item" src="images/grid6/casa.png" /> </a>
-                  <!-- project name  - g70life -->
-                  <a href="https://dribbble.com/bencasalino">
-                    <img class="item" src="images/grid6/quark.png" /> </a>
-                  <!-- project name nuggets -->
-                  <a href="https://dribbble.com/bencasalino">
-                    <img class="item" src="images/grid6/elec-3.png" /> </a>
+                    <img alt="Casalino Chiropractic Logo"class="item" src="images/project_image_tiles/casa.png" /> </a>
+                  <!-- project name - Quark  -->
+                  <a href="https://dribbble.com/shots/2782521-Quark-Package-Redesign">
+                    <img alt="QuarkXpress Package Redesign" class="item" src="images/project_image_tiles/quark.png" /> </a>
+                  <!-- project graphic design logo elec -->
+                  <a href="https://dribbble.com/shots/2262877-Logo-Idea">
+                    <img alt="Electrical Services LTD Logo" class="item" src="images/project_image_tiles/elec-3.png" /> </a>
                 </section>
-<!-- STRUCTURE -->
-<!--
-row 1:
--
--
--
--
-row 2:
--
--
--
--
- -->
-
   </main>
 </body>
