clean up un-used files

--- a/index.html
+++ b/index.html
@@ -29,19 +29,17 @@
     </div>
     <div class="fold">
       <div class="hello">
-        <h1 class="hw">Hello World</h1>
+        <h1 class="hw">HELLO WORLD</h1>
         <hr>
         <h2>
-          I'M A COLORADO BASED FRONT END WEB DEVELOPER
+          I'M A COLORADO BASED FRONT-END WORLD WIDE WEB DEVELOPER
         </h2>
       </div>
       <div class="bio">
-        <h3>
-          Wanna talk about a project?
-        </h3>
         <div class="rowcons">
-          <h4>Let's connect!</h4>
-
+          <a href="https://talent.galvanize.com/students/2070/jobs">
+            <img class="sm sm-icons" src="images/icons/sm-galvanize.gif">
+          </a>
           <a href="mailto:bencasalino@gmail.com" target="top">
             <img class="sm sm-icons" src="images/icons/sm-mail.svg">
           </a>
@@ -56,6 +54,7 @@
           <a href="https://www.instagram.com/benoftheuniverse/">
             <img class="sm sm-icons" src="images/icons/sm-ig.svg">
           </a>
+
         </div>
       </div>
     </div>
