--- a/projects.html
+++ b/projects.html
@@ -32,26 +32,27 @@
         <hr />
     </h6>
     </div> -->
-
-<!-- ROW 1  -->
+    <!-- //////////////////////// ROW 10  //////////////////////// -->
+    <!-- next four in
+    build an API
+    Ryan Proj
+    -->
+    <!-- //////////////////////// ROW 9 //////////////////////// -->
         <section class="grid">
           <!-- project name - Colorado Soccer Games app   -->
           <a href="https://teamfinder-app.firebaseapp.com/">
-            <img class="item" src="images/project_image_tiles/tfnew.png" /> </a>
+            <img class="item" src="images/project_image_tiles/csg.png" /> </a>
           <!-- project name  - Social Cloud  proj -->
           <a href="https://github.com/chris-swan/walk_ins_welcome">
-            <img class="item" src="images/project_image_tiles/wiw.png" /> </a>
+            <img class="item" src="images/project_image_tiles/social.png" /> </a>
           <!-- project name  - SFDOC proj -->
           <a href="http://www.github.com/bencasalino">
-            <img class="item" src="images/project_image_tiles/clymb.png" /> </a>
+            <img class="item" src="images/project_image_tiles/sfdoc-black.png" /> </a>
           <!-- project - Nuggets Logo Rework proj -->
           <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake">
             <img class="item" src="images/project_image_tiles/nug.png" /> </a>
         </section>
-<!-- ROW 2  -->
-
-
-
+    <!-- //////////////////////// ROW 8 //////////////////////// -->
     <section class="grid">
       <!-- project name - team finder web app   -->
       <a href="https://teamfinder-app.firebaseapp.com/"> <img class="item" src="images/project_image_tiles/tfnew.png" /> </a>
@@ -62,7 +63,7 @@
       <!-- project Dragic -->
       <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake"> <img class="item" src="images/project_image_tiles/nug.png" /> </a>
     </section>
-
+    <!-- //////////////////////// ROW 7 //////////////////////// -->
     <section class="grid">
       <!-- project name - Game Cover Nash   -->
       <a href="https://dribbble.com/shots/2287089-Nash-Game-Cover"> <img class="item" src="images/project_image_tiles/nash.png" /> </a>
