--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <a href="https://www.instagram.com/benoftheuniverse/">
             <img class="sm sm-icons" src="images/icons/sm-ig.svg">
           </a>
+          <p>&nbsp;|&nbsp;</p>
+          <a href="images/BenCasalino-Resume.pdf" download>
+            <img class="sm sm-icons" src="images/icons/resume-black.gif"> </a>
 
         </div>
       </div>
