--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
       <div class="header-left">
         <img class="logo animated slideInLeft" src="images/botu.ico" />
         <span class="header-name">BEN CASALINO
-                </span>
+        </span>
       </div>
 
       <div class="header-right">
@@ -38,115 +38,139 @@
     Ryan Proj
     -->
     <!-- //////////////////////// ROW 9 //////////////////////// -->
-        <section class="grid">
-          <!-- project name - Colorado Soccer Games app   -->
-          <a href="https://teamfinder-app.firebaseapp.com/">
-            <img class="item" src="images/project_image_tiles/csg-logo.png" /> </a>
-          <!-- project name  - Social Cloud  proj -->
-          <a href="https://github.com/chris-swan/walk_ins_welcome">
-            <img class="item" src="images/project_image_tiles/social.png" /> </a>
-          <!-- project name  - SFDOC proj -->
-          <a href="http://www.github.com/bencasalino">
-            <img class="item" src="images/project_image_tiles/sfdoc-black.png" /> </a>
-          <!-- project - Nuggets Logo Rework proj -->
-          <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake">
-            <img class="item" src="images/project_image_tiles/nug.png" /> </a>
-        </section>
+    <section class="grid">
+      <!-- project name - Colorado Soccer Games app   -->
+      <a href="https://teamfinder-app.firebaseapp.com/">
+        <img class="item" src="images/project_image_tiles/csg-logo.png" /> </a>
+      <!-- project name  - Social Cloud  proj -->
+      <a href="https://github.com/chris-swan/walk_ins_welcome">
+        <img class="item" src="images/project_image_tiles/social.png" /> </a>
+      <!-- project name  - SFDOC proj -->
+      <a href="http://www.github.com/bencasalino">
+        <img class="item" src="images/project_image_tiles/sfdoc-black.png" /> </a>
+      <!-- project - Nuggets Logo Rework proj -->
+      <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake">
+        <img class="item" src="images/project_image_tiles/nug.png" /> </a>
+    </section>
     <!-- //////////////////////// ROW 8 //////////////////////// -->
     <section class="grid">
       <!-- project name - team finder web app   -->
-      <a href="https://teamfinder-app.firebaseapp.com/"> <img class="item" src="images/project_image_tiles/tfnew.png" /> </a>
+      <a href="https://teamfinder-app.firebaseapp.com/">
+        <img class="item" src="images/project_image_tiles/tfnew.png" /> </a>
       <!-- project name  - Walkin-s Welcome proj -->
-      <a href="https://github.com/chris-swan/walk_ins_welcome"> <img class="item" src="images/project_image_tiles/wiw.png" /> </a>
+      <a href="https://github.com/chris-swan/walk_ins_welcome">
+        <img class="item" src="images/project_image_tiles/wiw.png" /> </a>
       <!-- project name  - Clymb Logo  -->
-      <a href="http://www.github.com/bencasalino"> <img class="item" src="images/project_image_tiles/clymb.png" /> </a>
+      <a href="http://www.github.com/bencasalino">
+        <img class="item" src="images/project_image_tiles/clymb.png" /> </a>
       <!-- project Dragic -->
-      <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake"> <img class="item" src="images/project_image_tiles/nug.png" /> </a>
+      <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake">
+        <img class="item" src="images/project_image_tiles/nug.png" /> </a>
     </section>
     <!-- //////////////////////// ROW 7 //////////////////////// -->
     <section class="grid">
       <!-- project name - Game Cover Nash   -->
-      <a href="https://dribbble.com/shots/2287089-Nash-Game-Cover"> <img class="item" src="images/project_image_tiles/nash.png" /> </a>
+      <a href="https://dribbble.com/shots/2287089-Nash-Game-Cover">
+        <img class="item" src="images/project_image_tiles/nash.png" /> </a>
       <!-- project name  - pixel maker proj -->
-      <a href="https://multco.us/it/multnomah-county-bridge-alerts"> <img class="item" src="images/project_image_tiles/mult.png" /> </a>
+      <a href="https://multco.us/it/multnomah-county-bridge-alerts">
+        <img class="item" src="images/project_image_tiles/mult.png" /> </a>
       <!-- project name  - Wacom  -->
-      <a href="http://www.wacom.com/en-us"> <img alt="Wacom" class="item" src="images/project_image_tiles/wacom.png" /> </a>
+      <a href="http://www.wacom.com/en-us">
+        <img alt="Wacom" class="item" src="images/project_image_tiles/wacom.png" /> </a>
       <!-- project name g70 life cards -->
-      <a href="https://github.com/g70-Life"> <img alt="g70.Life" class="item" src="images/project_image_tiles/g70_final.png" /> </a>
+      <a href="https://github.com/g70-Life">
+        <img alt="g70.Life" class="item" src="images/project_image_tiles/g70_final.png" /> </a>
     </section>
     <!-- //////////////////////// ROW 6 //////////////////////// -->
     <section class="grid">
       <!-- project name - Where Hackathon web app   -->
-      <a href="https://github.com/mrsaxmannjr/Hackathon-Client"> <img alt="Where Hackathon" class="item" src="images/project_image_tiles/where.png" /> </a>
+      <a href="https://github.com/mrsaxmannjr/Hackathon-Client">
+        <img alt="Where Hackathon" class="item" src="images/project_image_tiles/where.png" /> </a>
       <!-- project name  - Planet Icons set proj -->
-      <a href="https://dribbble.com/shots/3788281-Planets-Icon-Set"> <img alt="Plaents Icon Set" class="item" src="images/project_image_tiles/plan-it.png" /> </a>
+      <a href="https://dribbble.com/shots/3788281-Planets-Icon-Set">
+        <img alt="Plaents Icon Set" class="item" src="images/project_image_tiles/plan-it.png" /> </a>
       <!-- project name  - El Taco Diario -->
-      <a href="http://anniehoogendoorn.com/tacoHomepage/"> <img  alt="El Taco Diario"class="item" src="images/project_image_tiles/taco.png" /> </a>
+      <a href="http://anniehoogendoorn.com/tacoHomepage/">
+        <img alt="El Taco Diario" class="item" src="images/project_image_tiles/taco.png" /> </a>
       <!-- project name Periodic Table of Elements -->
-      <a href="https://periodictable-of-elements.firebaseapp.com/"> <img alt="Periodic Table of Elements" class="item" src="images/project_image_tiles/tile-tptoe.png" /> </a>
+      <a href="https://periodictable-of-elements.firebaseapp.com/">
+        <img alt="Periodic Table of Elements" class="item" src="images/project_image_tiles/tile-tptoe.png" /> </a>
     </section>
     <!-- //////////////////////// ROW 5 //////////////////////// -->
     <section class="grid">
       <!-- project name - BSFB web app   -->
-      <a href="http://www.bsfbbasketball.com"> <img alt="BSFB Website" class="item" src="images/project_image_tiles/bsfb.png" /> </a>
+      <a href="http://www.bsfbbasketball.com">
+        <img alt="BSFB Website" class="item" src="images/project_image_tiles/bsfb.png" /> </a>
       <!-- project name  - GCI logo proj -->
-      <a href="https://dribbble.com/bencasalino"> <img alt="GCI Logo" class="item" src="images/project_image_tiles/gci.png" /> </a>
+      <a href="https://dribbble.com/bencasalino">
+        <img alt="GCI Logo" class="item" src="images/project_image_tiles/gci.png" /> </a>
       <!-- project name  - BOTU proj -->
-      <a href="https://soundcloud.com/benoftheuniverse"> <img class="item" src="images/project_image_tiles/botu_sc.png" /> </a>
+      <a href="https://soundcloud.com/benoftheuniverse">
+        <img class="item" src="images/project_image_tiles/botu_sc.png" /> </a>
       <!-- project name nuggets -->
-      <a href="https://dribbble.com/bencasalino">  <img class="item" src="images/project_image_tiles/dragic.png" /> </a>
+      <a href="https://dribbble.com/bencasalino">
+        <img class="item" src="images/project_image_tiles/dragic.png" /> </a>
     </section>
     <!-- //////////////////////// ROW 4 //////////////////////// -->
     <section class="grid">
       <!-- project name - BSFB app   -->
-      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/project_image_tiles/jon.png" /> </a>
+      <a href="http://www.bsfbbasketball.com">
+        <img class="item" src="images/project_image_tiles/jon.png" /> </a>
       <!-- project name  - ADAM proj -->
-      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/project_image_tiles/adam.png" /> </a>
+      <a href="http://www.bsfbbasketball.com">
+        <img class="item" src="images/project_image_tiles/adam.png" /> </a>
       <!-- project name  - BEN proj -->
-      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/project_image_tiles/ben.png" /> </a>
+      <a href="http://www.bsfbbasketball.com">
+        <img class="item" src="images/project_image_tiles/ben.png" /> </a>
       <!-- project name RAFA proj  -->
-      <a href="http://www.bsfbbasketball.com"> <img class="item" src="images/project_image_tiles/rafa.png" /> </a>
+      <a href="http://www.bsfbbasketball.com">
+        <img class="item" src="images/project_image_tiles/rafa.png" /> </a>
     </section>
-        <!-- //////////////////////// ROW 3 //////////////////////// -->
+    <!-- //////////////////////// ROW 3 //////////////////////// -->
     <section class="grid">
       <!-- project name - colo canvas web app   -->
-      <a href="https://github.com/bencasalino/colo_flag_canvas"> <img class="item" src="images/project_image_tiles/colo_square.png" /> </a>
+      <a href="https://github.com/bencasalino/colo_flag_canvas">
+        <img class="item" src="images/project_image_tiles/colo_square.png" /> </a>
       <!-- project name  - DDBOA -->
-      <a href="https://www.linkedin.com/in/bencasalino/"> <img class="item" alt="DDBoA" src="images/project_image_tiles/ddboa.png" /> </a>
+      <a href="https://www.linkedin.com/in/bencasalino/">
+        <img class="item" alt="DDBoA" src="images/project_image_tiles/ddboa.png" /> </a>
       <!-- project name  - PLUS QA proj -->
-      <a href="https://www.linkedin.com/in/bencasalino/"> <img alt="PLUS QA" class="item" src="images/project_image_tiles/qa.png" /> </a>
+      <a href="https://www.linkedin.com/in/bencasalino/">
+        <img alt="PLUS QA" class="item" src="images/project_image_tiles/qa.png" /> </a>
       <!-- project name Rocky Mountain Cup -->
-      <a href="https://dribbble.com/shots/3785132-Rocky-Mountain-Cup-Infographic"> <img alt="Rocky Mountain Cup" class="item" src="images/project_image_tiles/cuprm.png" /> </a>
+      <a href="https://dribbble.com/shots/3785132-Rocky-Mountain-Cup-Infographic">
+        <img alt="Rocky Mountain Cup" class="item" src="images/project_image_tiles/cuprm.png" /> </a>
     </section>
     <!-- //////////////////////// ROW 2 //////////////////////// -->
     <section class="grid">
-    <!-- project name - pixel web app   -->
-    <a href="https://pixel-fac8e.firebaseapp.com/">
-    <img alt="Pixel Maker" class="item" src="images/project_image_tiles/pm.png" /> </a>
-    <!-- project name  - NBA #1 Pick Infographic  proj -->
-    <a href="https://dribbble.com/bencasalino">
-    <img alt="NBA #1 Pick Infographic" class="item" src="images/project_image_tiles/nba.png" /> </a>
-    <!-- project name  - all bball logos  -->
-    <a href="https://dribbble.com/bencasalino">
-    <img alt="All Baseketball Logos" class="item" src="images/project_image_tiles/logo-grid.png" /> </a>
-    <!-- project name - mammoth wine co.  -->
-    <a href="https://dribbble.com/shots/3785098-Mammoth-Wine-Co">
-    <img alt="Mammoth Wine Co." class="item" src="images/project_image_tiles/mammoth_grid.png" /> </a>
+      <!-- project name - pixel web app   -->
+      <a href="https://pixel-fac8e.firebaseapp.com/">
+        <img alt="Pixel Maker" class="item" src="images/project_image_tiles/pm.png" /> </a>
+      <!-- project name  - NBA #1 Pick Infographic  proj -->
+      <a href="https://dribbble.com/bencasalino">
+        <img alt="NBA #1 Pick Infographic" class="item" src="images/project_image_tiles/nba.png" /> </a>
+      <!-- project name  - all bball logos  -->
+      <a href="https://dribbble.com/bencasalino">
+        <img alt="All Baseketball Logos" class="item" src="images/project_image_tiles/logo-grid.png" /> </a>
+      <!-- project name - mammoth wine co.  -->
+      <a href="https://dribbble.com/shots/3785098-Mammoth-Wine-Co">
+        <img alt="Mammoth Wine Co." class="item" src="images/project_image_tiles/mammoth_grid.png" /> </a>
     </section>
-<!-- //////////////////////// ROW 1 //////////////////////// -->
+    <!-- //////////////////////// ROW 1 //////////////////////// -->
     <section class="grid">
-    <!-- project name - Keyboard Drums app   -->
-    <a href="https://keyboard-drums.firebaseapp.com/">
-    <img alt="Keyboard Drums Project" class="item" src="images/project_image_tiles/jsdrums.png" /> </a>
-    <!-- project name  - Casalino Chiropractic proj -->
-    <a href="https://dribbble.com/bencasalino">
-    <img alt="Casalino Chiropractic Logo"class="item" src="images/project_image_tiles/casa.png" /> </a>
-    <!-- project name - Quark  -->
-    <a href="https://dribbble.com/shots/2782521-Quark-Package-Redesign">
-    <img alt="QuarkXpress Package Redesign" class="item" src="images/project_image_tiles/quark.png" /> </a>
-    <!-- project graphic design logo elec -->
-    <a href="https://dribbble.com/shots/2262877-Logo-Idea">
-    <img alt="Electrical Services LTD Logo" class="item" src="images/project_image_tiles/elec-3.png" /> </a>
+      <!-- project name - Keyboard Drums app   -->
+      <a href="https://keyboard-drums.firebaseapp.com/">
+        <img alt="Keyboard Drums Project" class="item" src="images/project_image_tiles/jsdrums.png" /> </a>
+      <!-- project name  - Casalino Chiropractic proj -->
+      <a href="https://dribbble.com/bencasalino">
+        <img alt="Casalino Chiropractic Logo" class="item" src="images/project_image_tiles/casa.png" /> </a>
+      <!-- project name - Quark  -->
+      <a href="https://dribbble.com/shots/2782521-Quark-Package-Redesign">
+        <img alt="QuarkXpress Package Redesign" class="item" src="images/project_image_tiles/quark.png" /> </a>
+      <!-- project graphic design logo elec -->
+      <a href="https://dribbble.com/shots/2262877-Logo-Idea">
+        <img alt="Electrical Services LTD Logo" class="item" src="images/project_image_tiles/elec-3.png" /> </a>
     </section>
     <br>
     <br>
