--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
   </header>
   <main>
-    <div class="test">
+    <div class="hero">
     </div>
     <div class="fold">
       <div class="hello">
@@ -35,8 +35,8 @@
           I'M A COLORADO BASED FRONT-END WORLD WIDE WEB DEVELOPER
         </h2>
       </div>
-      <div class="bio">
-        <div class="rowcons">
+      <div class="wrapper-section">
+        <div class="wrapper-row-icons">
           <a href="https://talent.galvanize.com/students/2070/jobs">
             <img class="sm sm-icons" src="images/icons/sm-galvanize.gif">
           </a>
