--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>BEN CASALINO</title>
   <link rel="shortcut icon" href="images/botu.ico">
   <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/tester.css">
 </head>
 
 <body>
@@ -18,24 +18,22 @@
         </span>
       </div>
       <div class="header-right">
-        <a class="nav-cta effect-underline" href="projects.html"> PROJECTS </a>
-        <em class="pipe animated fadeIn">| </em>
-        <a href="https://www.linkedin.com/in/bencasalino/" target="blank" class="nav-cta effect-underline"> CONTACT </a>
+        <a class="nav-cta" href="projects.html"> PROJECTS </a>
+        <em class="animated fadeIn"> | </em>
+        <a class="nav-cta" href="https://www.linkedin.com/in/bencasalino/" target="blank"> CONTACT </a>
       </div>
     </nav>
   </header>
   <main>
-    <div class="hero">
+    <div class="hero-banner">
     </div>
-    <div class="fold">
+    <div class="foldline">
       <div class="hello">
         <h1 class="hw">HELLO WORLD</h1>
         <hr>
         <h2>
-          I'M A COLORADO BASED FRONT-END WORLD WIDE WEB DEVELOPER
+          I'M A COLORADO BASED FRONT-END WEB DEVELOPER
         </h2>
-      </div>
-      <div class="wrapper-section">
         <div class="wrapper-row-icons">
           <a href="https://talent.galvanize.com/students/2070/jobs">
             <img class="sm sm-icons" src="images/icons/sm-galvanize.gif">
@@ -57,10 +55,10 @@
           <p>&nbsp;|&nbsp;</p>
           <a href="images/BenCasalino-Resume.pdf" download>
             <img class="sm sm-icons" src="images/icons/resume-black.gif"> </a>
-
         </div>
       </div>
     </div>
+
   </main>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91622684-3">
