--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>BEN CASALINO</title>
   <link rel="shortcut icon" href="images/botu.ico">
   <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/tester.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -27,9 +27,9 @@
   <main>
     <div class="hero-banner">
     </div>
-    <div class="foldline">
-      <div class="hello">
-        <h1 class="hw">HELLO WORLD</h1>
+    <div class="wrapper-foldline">
+      <div class="bottom-section-left">
+        <h1>HELLO WORLD</h1>
         <hr>
         <h2>
           I'M A COLORADO BASED FRONT-END WEB DEVELOPER
@@ -56,6 +56,9 @@
           <a href="images/BenCasalino-Resume.pdf" download>
             <img class="sm sm-icons" src="images/icons/resume-black.gif"> </a>
         </div>
+      </div>
+      <div class="bottom-section-right">
+        SHOW ANYTHING
       </div>
     </div>
 
