--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="header-right animated wow  slideInDown">
         <a class="nav-cta" href="#projects"> PROJECTS </a>
-        <em class="animated fadeIn"> | </em>
+        <em class="animated pipe fadeIn"> | </em>
         <a class="nav-cta" href="https://www.linkedin.com/in/bencasalino/" target="blank"> CONTACT </a>
       </div>
     </nav>
@@ -34,11 +34,11 @@
     </div>
     <div class="wrapper-foldline">
       <div class="bottom-section-left">
-        <h1>HELLO WORLD</h1>
-        <hr>
+        <!-- <h1>HELLO WORLD</h1> -->
         <h2>
           I'M A COLORADO BASED FRONT-END WEB DEVELOPER
         </h2>
+                <hr>
         <div class="wrapper-row-icons">
           <a href="https://talent.galvanize.com/students/2070/jobs">
             <img class="sm sm-icons wow slideInDown" data-wow-duration=".2s" src="images/icons/sm-galvanize.gif">
