--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <a href="https://www.instagram.com/benoftheuniverse/">
             <img class="sm sm-icons wow slideInDown" data-wow-duration="1.2s" src="images/icons/sm-ig.svg">
           </a>
+          <a href="https://www.builtincolorado.com/user/65239/" target="top">
+            <img class="sm sm-icons wow slideInDown" data-wow-duration="1.5s" src="images/icons/bic.gif">
+          </a>
           <em class="animated fadeIn pipe wow slideInDown" data-wow-duration="1.5s"> &nbsp;|&nbsp;
           </em>
           <a href="images/BenCasalino-Resume.pdf" download>
