--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8">
   <title>BEN CASALINO</title>
   <link rel="shortcut icon" href="images/botu.ico">
-  <!-- animate css cdn -->
+  <!-- Animate CSS lib cdn and fallback -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-  <!-- or -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
@@ -16,16 +15,15 @@
 <body>
   <header>
     <nav>
-      <div class="header-left">
-        <img class="logo animated wow slideInLeft" src="images/botu.ico" />
-
+      <div class="header-left-wrapper">
+        <img class="header-logo animated wow slideInLeft" src="images/botu.ico" />
         <span class="header-name">BEN CASALINO
         </span>
       </div>
-      <div class="header-right animated wow  slideInDown">
-        <a class="nav-cta" href="#projects"> PROJECTS </a>
-        <em class="animated pipe fadeIn"> | </em>
-        <a class="nav-cta" href="https://www.linkedin.com/in/bencasalino/" target="blank"> CONTACT </a>
+      <div class="header-right-wrapper animated wow  slideInDown">
+        <a class="nav-cta-links" href="#projects"> PROJECTS </a>
+        <em class="animated fadeIn pipe-styles"> | </em>
+        <a class="nav-cta-links" href="https://www.linkedin.com/in/bencasalino/" target="blank"> CONTACT </a>
       </div>
     </nav>
   </header>
@@ -60,7 +58,7 @@
           <a href="https://www.builtincolorado.com/user/65239/" target="top">
             <img class="sm sm-icons wow slideInDown" data-wow-duration="1.5s" src="images/icons/bic.gif">
           </a>
-          <em class="animated fadeIn pipe wow slideInDown" data-wow-duration="1.5s"> &nbsp;|&nbsp;
+          <em class="animated fadeIn wow pipe-styles slideInDown" data-wow-duration="1.5s"> &nbsp;|&nbsp;
           </em>
           <a href="images/BenCasalino-Resume.pdf" download>
             <img class="sm sm-icons wow slideInDown" data-wow-duration="1.8s" src="images/icons/resume-black.gif"> </a>
