--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="header-right-wrapper animated wow  slideInDown">
         <a class="nav-cta-links" href="#projects"> PROJECTS </a>
-        <em class="animated fadeIn pipe-styles"> | </em>
+        <em class="animated fadeIn pipe-header"> | </em>
         <a class="nav-cta-links" href="https://www.linkedin.com/in/bencasalino/" target="blank"> CONTACT </a>
       </div>
     </nav>
@@ -36,7 +36,7 @@
         <h2>
           I'M A COLORADO BASED FRONT-END WEB DEVELOPER
         </h2>
-                <hr>
+        <hr>
         <div class="wrapper-row-icons">
           <a href="https://talent.galvanize.com/students/2070/jobs">
             <img class="sm sm-icons wow slideInDown" data-wow-duration=".2s" src="images/icons/sm-galvanize.gif">
