add mobile pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- projects tab  -->
       <div class="bottom-section-right">
         <span id="projects"></span>
-        <h3> PROJECTS</h3>
+        <h3> <a href="projects-mobile.html"> PROJECTS </a></h3>
 
         <!-- row 1 /////////////////////////////////////////////////////// -->
         <!-- project name - Colorado Soccer Games app   -->
